# projection-engine-2

./: CMakeLists.txt  README.md  readme.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/core/: StringUtils.h  UUID.h
src/core/debug/: ILoggable.h  Timer.cpp  Timer.h
src/core/event/: EventController.cpp  EventController.h  IEventPayload.h  IEventTarget.h  IListener.cpp  IListener.h  ListenerWrapper.h  TypedEventPayload.h
src/core/structures/: List.h  Map.h
src/engine/: AbstractSerializable.cpp  AbstractSerializable.h  Engine.cpp  Engine.h  RuntimeState.h  SerializableRepository.cpp  SerializableRepository.h  definitions.h
src/engine/enum/: AtmosphereRenderingType.h  CameraProjectionType.h  ColliderType.cpp  ColliderType.h  ComponentType.cpp  ComponentType.h  EngineEvents.cpp  EngineEvents.h  LightType.cpp  LightType.h  MaterialRenderingType.h  RotationType.h  StaticResource.h  StaticShader.cpp  StaticShader.h  StaticUBO.cpp  StaticUBO.h
src/engine/listeners/: WorldChangeListener.cpp  WorldChangeListener.h  WorldHierarchyListener.cpp  WorldHierarchyListener.h
src/engine/resource/: ResourceType.h  ResourcesSystem.cpp  ResourcesSystem.h  StaticResource.h  UBOType.h
src/engine/resource/core/: IResource.cpp  IResource.h  RFBO.cpp  RFBO.h  RMesh.cpp  RMesh.h  RShader.cpp  RShader.h  RTexture.h  RUBO.cpp  RUBO.h  VertexBufferObject.cpp  VertexBufferObject.h
src/engine/resource/dto/: FBOTextureDTO.h  UBODataDTO.h
src/engine/runtime/: AbstractSystem.cpp  AbstractSystem.h  CameraSystem.cpp  CameraSystem.h  CameraTrackerSystem.cpp  CameraTrackerSystem.h  RuntimeSystem.cpp  RuntimeSystem.h
src/engine/runtime/systems/: ISystem.cpp  ISystem.h  InputSystem.cpp  InputSystem.h
src/engine/services/: AbstractCoreService.cpp  AbstractCoreService.h  AbstractFSService.h  AbstractIOService.cpp  CameraService.cpp  CameraService.h  ResourceService.cpp  ResourceService.h  RuntimeState.h  SystemService.cpp  SystemService.h  WorldLightsService.cpp  WorldLightsService.h  WorldPhysicsService.cpp  WorldPhysicsService.h  WorldService.cpp  WorldService.h
src/engine/services/resource/: StaticFBOFactory.cpp  StaticFBOFactory.h  StaticMeshFactory.cpp  StaticMeshFactory.h  StaticResourceFactory.cpp  StaticResourceFactory.h  StaticShaderFactory.cpp  StaticShaderFactory.h  StaticTextureFactory.cpp  StaticTextureFactory.h  StaticUBOFactory.cpp  StaticUBOFactory.h
src/engine/services/world/: AbstractComponent.cpp  AbstractComponent.h  ComponentFactory.cpp  ComponentFactory.h  Entity.cpp  Entity.h  WorldRegistry.cpp  WorldRegistry.h
src/engine/shaders/: SSAO.frag
src/engine/util/: GPUUtil.cpp  GPUUtil.h  MathUtil.cpp  MathUtil.h  NoiseTextureDTO.h  PrimitiveUtil.cpp  PrimitiveUtil.h  ShaderUtil.cpp  ShaderUtil.h
src/engine/world/: AbstractEntity.cpp  AbstractEntity.h  Component.h  ComponentFactory.cpp  ComponentFactory.h  ComponentsEnum.h  IEntity.cpp  IEntity.h  WorldSystem.cpp  WorldSystem.h
src/engine/world/components/: AbstractComponent.cpp  AbstractComponent.h  CTransform.cpp  CTransform.h  IComponent.cpp  IComponent.h  MovementComponent.cpp  MovementComponent.h
src/services/: AbstractService.h  EngineService.cpp  EngineService.h  FileSystemService.cpp  FileSystemService.h  HierarchyService.cpp  HierarchyService.h  ProjectService.cpp  ProjectService.h  ShaderService.cpp  ShaderService.h
src/ui/: AbstractService.h  WindowRepository.cpp  WindowRepository.h  WindowSystem.cpp  WindowSystem.h  WindowUtil.cpp  WindowUtil.h  imgui_demo.cpp
src/ui/core/: IRunner.h  IWindow.cpp  IWindow.h
src/ui/core/document/: Document.cpp  Document.h  ElementController.cpp  ElementController.h  ViewController.cpp  ViewController.h
src/ui/core/elements/: AbstractSimpleElement.cpp  AbstractSimpleElement.h  AbstractTitledElement.h  DynamicElement.cpp  DynamicElement.h  EButton.cpp  EButton.h  EIcon.h  EInlineBlock.cpp  EInlineBlock.h  EMenu.h  EMenuBar.h  EMenuItem.cpp  EMenuItem.h  ESection.cpp  ESection.h  EText.h  ETree.cpp  ETree.h  ETreeNode.cpp  ETreeNode.h  IElement.h
src/ui/core/store/: IStore.h
src/ui/core/views/: IView.h
src/ui/core/webview/: WebViewWindow.cpp  WebViewWindow.h
src/ui/editor/: Editor.cpp  Editor.h  EditorWindow.cpp  EditorWindow.h  FS.cpp  FS.h
src/ui/editor/basic/: FSController.cpp  FSController.h  IOController.cpp  IOController.h  Runner.cpp  Runner.h
src/ui/editor/runner/: Runner.cpp  Runner.h  imgui_demo.cpp
src/ui/editor/static/: HierarchyView.xml  MainView.xml
src/ui/editor/views/: MainView.h
src/ui/projects/: Projects.cpp  Projects.h  ProjectsService.cpp  ProjectsService.h
src/ui/shared/: AbstractWindow.cpp  AbstractWindow.h  IWindow.cpp  IWindow.h  ImGuiContextUtil.cpp  ImGuiContextUtil.h
src/ui/shared/document/: Document.cpp  Document.h  ElementController.cpp  ElementController.h  ViewController.cpp  ViewController.h
src/ui/shared/elements/: AbstractTitledElement.cpp  DynamicElement.h  EButton.h  EIcon.cpp  EInlineBlock.h  EMenu.cpp  EMenuBar.cpp  EMenuBar.h  EMenuItem.cpp  EText.cpp  ETreeNode.cpp  (+2 more)
src/ui/webview/: esbuild.js
src/util/: Definitions.h  FS.cpp  FS.h  FileSystemUtil.h  JSON.h  StringUtils.cpp  StringUtils.h  UUID.cpp  UUID.h
src/util/debug/: ILoggable.cpp  ILoggable.h
src/util/event/: EventController.cpp  EventController.h  IEventPayload.cpp  IEventTarget.h  IListener.h  ListenerWrapper.cpp  ListenerWrapper.h
src/util/structures/: Map.cpp  Map.h
test/: CMakeLists.txt  Tester.cpp  Tester.h  main_test.cpp
test/core/: FileSystemTest.cpp  FileSystemTest.h  JSONTest.cpp  JSONTest.h  ListTest.cpp  ListTest.h  LoggerTest.cpp  LoggerTest.h  MapTest.cpp  MapTest.h  StringUtilTest.cpp  StringUtilTest.h  TimerTest.cpp  TimerTest.h
test/engine/: EngineTest.cpp  EngineTest.h  Sample.h  SerializationTest.cpp  SerializationTest.h  WorldServiceTest.cpp  WorldServiceTest.h
test/ui/document/: DocumentTest.cpp  DocumentTest.h  Example.cpp  Example.h  Example.xml
test/ui/event/: EventControllerTest.cpp  EventControllerTest.h  Listener.cpp  Listener.h
test/ui/store/: IStoreTest.cpp  IStoreTest.h  SampleData.h  SampleStore.h
(+646 files in other folders)
